// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/components/gallery/Gallery return Gallery and click new 1`] = `
<div>
  <span
    class="variable variable"
  >
    <div
      class="Gallery"
    >
      <div
        class="octo-gallery-new"
      >
        + New
      </div>
    </div>
  </span>
</div>
`;

exports[`src/components/gallery/Gallery return Gallery readonly 1`] = `
<div>
  <span
    class="variable variable"
  >
    <div
      class="Gallery"
    />
  </span>
</div>
`;

exports[`src/components/gallery/Gallery should match snapshot 1`] = `
<div>
  <span
    class="variable variable"
  >
    <div
      class="Gallery"
    >
      <div
        class="octo-gallery-new"
      >
        + New
      </div>
    </div>
  </span>
</div>
`;
